--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,10 @@
 [Basic]
 # Основные настройки приложения
-# ONLY Latin letters !!!!
-# Basic settings for application
-#
-# Buffer size for download data
 # Размер буфера для скачивания данных
 buffer_size = 20485760
-# Pool counts for download data
-# CPU counts 
 # Количество потоков для скачивания данных
+# делай примерно количеству ядер своего процессора при условии качественного
+# интернет-подключения
 pool_length = 8
 # Имя выходного файла по умолчанию
 out_file_name = all_parts
@@ -19,11 +15,14 @@ tmp_data_dir = data
 # Папка для записи скаченного файла
 out_data_dir = out
 # Имя драйвера Firefox
-# Driver name for Firefox
-# for Windows - geckodriver.exe
-# for Linux - geckodriver 
-driver_name = geckodriver.exe 
+# берем свежую версию отсюда https://github.com/mozilla/geckodriver/releases для своей операционной системы
+# и помещаем его в папку core проекта
+# для Windows - geckodriver.exe
+# for Linux наверное просто geckodriver )))
+driver_name = geckodriver.exe
+# Время задержки - если сетевое подключение неустойчивое или медленное надо попробовать увеличить
 delay_time = 20
 [Proxy]
-# Settings for proxy
+# Настройки для прокси
+# Включаем/Выключаем использование прокси
 proxy_enabled = False
